erDiagram
    AUTH_USERS {
        uuid id PK
    }

    PROFILES {
        uuid id PK
        text full_name
        text avatar_url
        text email
        text phone
        text city
        text region
    }

    STATES_REGIONS {
        text id PK
        text name_en
        text name_mm
    }

    TOWNSHIPS {
        text id PK
        text region_id FK
        text name_en
        text name_mm
    }

    PROPERTIES {
        uuid id PK
        uuid user_id FK
        text title_en
        text title_mm
        text description
        text deal_type
        text property_type
        numeric price
        text currency_unit
        jsonb images
        text video_url
        int bedrooms
        int bathrooms
        numeric width
        numeric length
        numeric sqft
        numeric area_value
        text area_unit
        text floor
        text state_region_id FK
        text township_id FK
        text search_value
        int ad_number
        boolean is_sold
        boolean is_rented
        timestamptz sold_at
        int views
        float latitude
        float longitude
        timestamptz created_at
    }

    SAVED_PROPERTIES {
        uuid id PK
        uuid user_id FK
        uuid property_id FK
        timestamptz created_at
    }

    CONVERSATIONS {
        uuid id PK
        uuid property_id FK
        uuid buyer_id FK
        uuid seller_id FK
        boolean muted
        boolean archived
        boolean pinned
        int buyer_unread_count
        int seller_unread_count
        timestamptz created_at
        timestamptz updated_at
    }

    MESSAGES {
        uuid id PK
        uuid conversation_id FK
        uuid sender_id FK
        text text
        jsonb attachment
        uuid reply_to_id FK
        boolean pinned_by_buyer
        boolean pinned_by_seller
        timestamptz read_at
        timestamptz created_at
    }

    WANTED_LISTINGS {
        uuid id PK
        uuid user_id FK
        text title
        text description
        text deal_type
        text property_type
        text region_id FK
        text township_id FK
        numeric budget_min
        numeric budget_max
        text currency_unit
        numeric monthly_fee_from
        numeric monthly_fee_to
        numeric area_from
        numeric area_to
        text area_unit
        text furnished_status
        text floor
        text contact_phone
        text status
        int views
        int bedrooms
        int bathrooms
        boolean co_brokerage
        timestamptz created_at
    }

    SAVED_SEARCHES {
        uuid id PK
        uuid user_id FK
        text name
        jsonb search_params
        timestamptz created_at
    }

    PUSH_TOKENS {
        uuid id PK
        uuid user_id FK
        text token
        text platform
        timestamptz created_at
        timestamptz updated_at
    }

    PROPERTY_VIEWS {
        uuid user_id PK
        uuid property_id PK
        timestamptz viewed_at
    }

    WANTED_LISTING_VIEWS {
        uuid user_id PK
        uuid listing_id PK
        timestamptz viewed_at
    }

    AUTH_USERS ||--|| PROFILES : "has (1 : 1..1) - association"
    AUTH_USERS ||--o{ PROPERTY_VIEWS : "viewed (1 : 0..*) - association"
    AUTH_USERS ||--o{ WANTED_LISTING_VIEWS : "viewed (1 : 0..*) - association"

    PROFILES ||--o{ PROPERTIES : "owns (1 : 0..*) - aggregation"
    PROFILES ||--o{ SAVED_PROPERTIES : "saves (1 : 0..*) - composition"
    PROFILES ||--o{ CONVERSATIONS : "buyer (1 : 0..*) - aggregation"
    PROFILES ||--o{ CONVERSATIONS : "seller (1 : 0..*) - aggregation"
    PROFILES ||--o{ MESSAGES : "sends (1 : 0..*) - composition"
    PROFILES ||--o{ WANTED_LISTINGS : "posts (1 : 0..*) - composition"
    PROFILES ||--o{ SAVED_SEARCHES : "owns (1 : 0..*) - composition"
    PROFILES ||--o{ PUSH_TOKENS : "registers (1 : 0..*) - composition"

    STATES_REGIONS ||--o{ TOWNSHIPS : "contains (1 : 0..*) - association"
    STATES_REGIONS ||--o{ PROPERTIES : "locates (1 : 0..*) - association"
    TOWNSHIPS ||--o{ PROPERTIES : "locates (1 : 0..*) - association"
    STATES_REGIONS ||--o{ WANTED_LISTINGS : "locates (1 : 0..*) - association"
    TOWNSHIPS ||--o{ WANTED_LISTINGS : "locates (1 : 0..*) - association"

    PROPERTIES ||--o{ SAVED_PROPERTIES : "saved by (1 : 0..*) - composition"
    PROPERTIES ||--o{ CONVERSATIONS : "about (1 : 0..*) - composition"
    PROPERTIES ||--o{ PROPERTY_VIEWS : "tracked by (1 : 0..*) - composition"

    CONVERSATIONS ||--}| MESSAGES : "contains (1 : 1..*) - composition"

    WANTED_LISTINGS ||--o{ WANTED_LISTING_VIEWS : "tracked by (1 : 0..*) - composition"
